feat(#147): 백테스트 성과 지표(CAGR, MDD, Sharpe) 산출 로직 구현 및 API 반영